@@ -131,76 +131,76 @@ Media/Tape/Recor_d Stop, Item
 Media/_Interface I, Branch
 
 Media/Interface I/Microdrive _1, Branch
-Media/Interface I/Microdrive 1/Insert _New, Item,, menu_media_mdr_new, 1
-Media/Interface I/Microdrive 1/_Insert..., Item,, menu_media_mdr_insert, 1
-Media/Interface I/Microdrive 1/_Eject, Item,, menu_media_mdr_eject, 0x01
-Media/Interface I/Microdrive 1/Eject and _write..., Item,, menu_media_mdr_eject, 0x11
+Media/Interface I/Microdrive 1/Insert _New, Item,, menu_media_insert_new, 0x31
+Media/Interface I/Microdrive 1/_Insert..., Item,, menu_media_insert, 0x31
+Media/Interface I/Microdrive 1/_Eject, Item,, menu_media_eject, 0x031
+Media/Interface I/Microdrive 1/Eject and _write..., Item,, menu_media_eject, 0x131
 Media/Interface I/Microdrive 1/Write _protect, Branch
-Media/Interface I/Microdrive 1/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x11
-Media/Interface I/Microdrive 1/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x01
+Media/Interface I/Microdrive 1/Write protect/_Set, Item,, menu_media_writeprotect, 0x131
+Media/Interface I/Microdrive 1/Write protect/_Remove, Item,, menu_media_writeprotect, 0x031
 
 Media/Interface I/Microdrive _2, Branch
-Media/Interface I/Microdrive 2/Insert _New, Item,, menu_media_mdr_new, 2
-Media/Interface I/Microdrive 2/_Insert..., Item,, menu_media_mdr_insert, 2
-Media/Interface I/Microdrive 2/_Eject, Item,, menu_media_mdr_eject, 0x02
-Media/Interface I/Microdrive 2/Eject and _write..., Item,, menu_media_mdr_eject, 0x12
+Media/Interface I/Microdrive 2/Insert _New, Item,, menu_media_insert_new, 0x32
+Media/Interface I/Microdrive 2/_Insert..., Item,, menu_media_insert, 0x32
+Media/Interface I/Microdrive 2/_Eject, Item,, menu_media_eject, 0x032
+Media/Interface I/Microdrive 2/Eject and _write..., Item,, menu_media_eject, 0x132
 Media/Interface I/Microdrive 2/Write _protect, Branch
-Media/Interface I/Microdrive 2/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x12
-Media/Interface I/Microdrive 2/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x02
+Media/Interface I/Microdrive 2/Write protect/_Set, Item,, menu_media_writeprotect, 0x132
+Media/Interface I/Microdrive 2/Write protect/_Remove, Item,, menu_media_writeprotect, 0x032
 
 Media/Interface I/Microdrive _3, Branch
-Media/Interface I/Microdrive 3/Insert _New, Item,, menu_media_mdr_new, 3
-Media/Interface I/Microdrive 3/_Insert..., Item,, menu_media_mdr_insert, 3
-Media/Interface I/Microdrive 3/_Eject, Item,, menu_media_mdr_eject, 0x03
-Media/Interface I/Microdrive 3/Eject and _write..., Item,, menu_media_mdr_eject, 0x13
+Media/Interface I/Microdrive 3/Insert _New, Item,, menu_media_insert_new, 0x33
+Media/Interface I/Microdrive 3/_Insert..., Item,, menu_media_insert, 0x33
+Media/Interface I/Microdrive 3/_Eject, Item,, menu_media_eject, 0x033
+Media/Interface I/Microdrive 3/Eject and _write..., Item,, menu_media_eject, 0x133
 Media/Interface I/Microdrive 3/Write _protect, Branch
-Media/Interface I/Microdrive 3/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x13
-Media/Interface I/Microdrive 3/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x03
+Media/Interface I/Microdrive 3/Write protect/_Set, Item,, menu_media_writeprotect, 0x133
+Media/Interface I/Microdrive 3/Write protect/_Remove, Item,, menu_media_writeprotect, 0x033
 
 Media/Interface I/Microdrive _4, Branch
-Media/Interface I/Microdrive 4/Insert _New, Item,, menu_media_mdr_new, 4
-Media/Interface I/Microdrive 4/_Insert..., Item,, menu_media_mdr_insert, 4
-Media/Interface I/Microdrive 4/_Eject, Item,, menu_media_mdr_eject, 0x04
-Media/Interface I/Microdrive 4/Eject and _write..., Item,, menu_media_mdr_eject, 0x14
+Media/Interface I/Microdrive 4/Insert _New, Item,, menu_media_insert_new, 0x34
+Media/Interface I/Microdrive 4/_Insert..., Item,, menu_media_insert, 0x34
+Media/Interface I/Microdrive 4/_Eject, Item,, menu_media_eject, 0x034
+Media/Interface I/Microdrive 4/Eject and _write..., Item,, menu_media_eject, 0x134
 Media/Interface I/Microdrive 4/Write _protect, Branch
-Media/Interface I/Microdrive 4/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x14
-Media/Interface I/Microdrive 4/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x04
+Media/Interface I/Microdrive 4/Write protect/_Set, Item,, menu_media_writeprotect, 0x134
+Media/Interface I/Microdrive 4/Write protect/_Remove, Item,, menu_media_writeprotect, 0x034
 
 Media/Interface I/Microdrive _5, Branch
-Media/Interface I/Microdrive 5/Insert _New, Item,, menu_media_mdr_new, 5
-Media/Interface I/Microdrive 5/_Insert..., Item,, menu_media_mdr_insert, 5
-Media/Interface I/Microdrive 5/_Eject, Item,, menu_media_mdr_eject, 0x05
-Media/Interface I/Microdrive 5/Eject and _write..., Item,, menu_media_mdr_eject, 0x15
+Media/Interface I/Microdrive 5/Insert _New, Item,, menu_media_insert_new, 0x35
+Media/Interface I/Microdrive 5/_Insert..., Item,, menu_media_insert, 0x35
+Media/Interface I/Microdrive 5/_Eject, Item,, menu_media_eject, 0x035
+Media/Interface I/Microdrive 5/Eject and _write..., Item,, menu_media_eject, 0x135
 Media/Interface I/Microdrive 5/Write _protect, Branch
-Media/Interface I/Microdrive 5/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x15
-Media/Interface I/Microdrive 5/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x05
+Media/Interface I/Microdrive 5/Write protect/_Set, Item,, menu_media_writeprotect, 0x135
+Media/Interface I/Microdrive 5/Write protect/_Remove, Item,, menu_media_writeprotect, 0x035
 
 Media/Interface I/Microdrive _6, Branch
-Media/Interface I/Microdrive 6/Insert _New, Item,, menu_media_mdr_new, 6
-Media/Interface I/Microdrive 6/_Insert..., Item,, menu_media_mdr_insert, 6
-Media/Interface I/Microdrive 6/_Eject, Item,, menu_media_mdr_eject, 0x06
-Media/Interface I/Microdrive 6/Eject and _write..., Item,, menu_media_mdr_eject, 0x16
+Media/Interface I/Microdrive 6/Insert _New, Item,, menu_media_insert_new, 0x36
+Media/Interface I/Microdrive 6/_Insert..., Item,, menu_media_insert, 0x36
+Media/Interface I/Microdrive 6/_Eject, Item,, menu_media_eject, 0x036
+Media/Interface I/Microdrive 6/Eject and _write..., Item,, menu_media_eject, 0x136
 Media/Interface I/Microdrive 6/Write _protect, Branch
-Media/Interface I/Microdrive 6/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x16
-Media/Interface I/Microdrive 6/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x06
+Media/Interface I/Microdrive 6/Write protect/_Set, Item,, menu_media_writeprotect, 0x136
+Media/Interface I/Microdrive 6/Write protect/_Remove, Item,, menu_media_writeprotect, 0x036
 
 Media/Interface I/Microdrive _7, Branch
-Media/Interface I/Microdrive 7/Insert _New, Item,, menu_media_mdr_new, 7
-Media/Interface I/Microdrive 7/_Insert..., Item,, menu_media_mdr_insert, 7
-Media/Interface I/Microdrive 7/_Eject, Item,, menu_media_mdr_eject, 0x07
-Media/Interface I/Microdrive 7/Eject and _write..., Item,, menu_media_mdr_eject, 0x17
+Media/Interface I/Microdrive 7/Insert _New, Item,, menu_media_insert_new, 0x37
+Media/Interface I/Microdrive 7/_Insert..., Item,, menu_media_insert, 0x37
+Media/Interface I/Microdrive 7/_Eject, Item,, menu_media_eject, 0x037
+Media/Interface I/Microdrive 7/Eject and _write..., Item,, menu_media_eject, 0x137
 Media/Interface I/Microdrive 7/Write _protect, Branch
-Media/Interface I/Microdrive 7/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x17
-Media/Interface I/Microdrive 7/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x07
+Media/Interface I/Microdrive 7/Write protect/_Set, Item,, menu_media_writeprotect, 0x137
+Media/Interface I/Microdrive 7/Write protect/_Remove, Item,, menu_media_writeprotect, 0x037
 
 Media/Interface I/Microdrive _8, Branch
-Media/Interface I/Microdrive 8/Insert _New, Item,, menu_media_mdr_new, 8
-Media/Interface I/Microdrive 8/_Insert..., Item,, menu_media_mdr_insert, 8
-Media/Interface I/Microdrive 8/_Eject, Item,, menu_media_mdr_eject, 0x08
-Media/Interface I/Microdrive 8/Eject and _write..., Item,, menu_media_mdr_eject, 0x18
+Media/Interface I/Microdrive 8/Insert _New, Item,, menu_media_insert_new, 0x38
+Media/Interface I/Microdrive 8/_Insert..., Item,, menu_media_insert, 0x38
+Media/Interface I/Microdrive 8/_Eject, Item,, menu_media_eject, 0x038
+Media/Interface I/Microdrive 8/Eject and _write..., Item,, menu_media_eject, 0x138
 Media/Interface I/Microdrive 8/Write _protect, Branch
-Media/Interface I/Microdrive 8/Write protect/_Set, Item,, menu_media_mdr_writeprotect, 0x18
-Media/Interface I/Microdrive 8/Write protect/_Remove, Item,, menu_media_mdr_writeprotect, 0x08
+Media/Interface I/Microdrive 8/Write protect/_Set, Item,, menu_media_writeprotect, 0x138
+Media/Interface I/Microdrive 8/Write protect/_Remove, Item,, menu_media_writeprotect, 0x038
 
 Media/Interface I/_RS232, Branch
 Media/Interface I/RS232/Plug _RxD, Item,, menu_media_if1_rs232, 0x01
@@ -216,41 +216,41 @@ Media/_Disk, Branch
 
 Media/Disk/+_3, Branch
 Media/Disk/+3/Drive _A:, Branch
-Media/Disk/+3/Drive A:/_Insert..., Item,, menu_media_disk_insert, 0x01
-Media/Disk/+3/Drive A:/_Eject, Item,, menu_media_disk_eject, 0x001
-Media/Disk/+3/Drive A:/Eject and _write..., Item,, menu_media_disk_eject, 0x101
+Media/Disk/+3/Drive A:/_Insert..., Item,, menu_media_insert, 0x01
+Media/Disk/+3/Drive A:/_Eject, Item,, menu_media_eject, 0x001
+Media/Disk/+3/Drive A:/Eject and _write..., Item,, menu_media_eject, 0x101
 Media/Disk/+3/Drive _B:, Branch
-Media/Disk/+3/Drive B:/_Insert..., Item,, menu_media_disk_insert, 0x02
-Media/Disk/+3/Drive B:/_Eject, Item,, menu_media_disk_eject, 0x002
-Media/Disk/+3/Drive B:/Eject and _write..., Item,, menu_media_disk_eject, 0x102
+Media/Disk/+3/Drive B:/_Insert..., Item,, menu_media_insert, 0x02
+Media/Disk/+3/Drive B:/_Eject, Item,, menu_media_eject, 0x002
+Media/Disk/+3/Drive B:/Eject and _write..., Item,, menu_media_eject, 0x102
 
 Media/Disk/_Beta, Branch
 Media/Disk/Beta/Drive _A:, Branch
-Media/Disk/Beta/Drive A:/_Insert..., Item,, menu_media_disk_insert, 0x11
-Media/Disk/Beta/Drive A:/_Eject, Item,, menu_media_disk_eject, 0x011
-Media/Disk/Beta/Drive A:/Eject and _write..., Item,, menu_media_disk_eject, 0x111
+Media/Disk/Beta/Drive A:/_Insert..., Item,, menu_media_insert, 0x11
+Media/Disk/Beta/Drive A:/_Eject, Item,, menu_media_eject, 0x011
+Media/Disk/Beta/Drive A:/Eject and _write..., Item,, menu_media_eject, 0x111
 Media/Disk/Beta/Drive _B:, Branch
-Media/Disk/Beta/Drive B:/_Insert..., Item,, menu_media_disk_insert, 0x12
-Media/Disk/Beta/Drive B:/_Eject, Item,, menu_media_disk_eject, 0x012
-Media/Disk/Beta/Drive B:/Eject and _write..., Item,, menu_media_disk_eject, 0x112
+Media/Disk/Beta/Drive B:/_Insert..., Item,, menu_media_insert, 0x12
+Media/Disk/Beta/Drive B:/_Eject, Item,, menu_media_eject, 0x012
+Media/Disk/Beta/Drive B:/Eject and _write..., Item,, menu_media_eject, 0x112
 Media/Disk/Beta/Drive _C:, Branch
-Media/Disk/Beta/Drive C:/_Insert..., Item,, menu_media_disk_insert, 0x13
-Media/Disk/Beta/Drive C:/_Eject, Item,, menu_media_disk_eject, 0x013
-Media/Disk/Beta/Drive C:/Eject and _write..., Item,, menu_media_disk_eject, 0x113
+Media/Disk/Beta/Drive C:/_Insert..., Item,, menu_media_insert, 0x13
+Media/Disk/Beta/Drive C:/_Eject, Item,, menu_media_eject, 0x013
+Media/Disk/Beta/Drive C:/Eject and _write..., Item,, menu_media_eject, 0x113
 Media/Disk/Beta/Drive _D:, Branch
-Media/Disk/Beta/Drive D:/_Insert..., Item,, menu_media_disk_insert, 0x14
-Media/Disk/Beta/Drive D:/_Eject, Item,, menu_media_disk_eject, 0x014
-Media/Disk/Beta/Drive D:/Eject and _write..., Item,, menu_media_disk_eject, 0x114
+Media/Disk/Beta/Drive D:/_Insert..., Item,, menu_media_insert, 0x14
+Media/Disk/Beta/Drive D:/_Eject, Item,, menu_media_eject, 0x014
+Media/Disk/Beta/Drive D:/Eject and _write..., Item,, menu_media_eject, 0x114
 
 Media/Disk/+_D, Branch
 Media/Disk/+D/Drive _1, Branch
-Media/Disk/+D/Drive 1/_Insert..., Item,, menu_media_disk_insert, 0x21
-Media/Disk/+D/Drive 1/_Eject, Item,, menu_media_disk_eject, 0x021
-Media/Disk/+D/Drive 1/Eject and _write..., Item,, menu_media_disk_eject, 0x121
+Media/Disk/+D/Drive 1/_Insert..., Item,, menu_media_insert, 0x21
+Media/Disk/+D/Drive 1/_Eject, Item,, menu_media_eject, 0x021
+Media/Disk/+D/Drive 1/Eject and _write..., Item,, menu_media_eject, 0x121
 Media/Disk/+D/Drive _2, Branch
-Media/Disk/+D/Drive 2/_Insert..., Item,, menu_media_disk_insert, 0x22
-Media/Disk/+D/Drive 2/_Eject, Item,, menu_media_disk_eject, 0x022
-Media/Disk/+D/Drive 2/Eject and _write..., Item,, menu_media_disk_eject, 0x122
+Media/Disk/+D/Drive 2/_Insert..., Item,, menu_media_insert, 0x22
+Media/Disk/+D/Drive 2/_Eject, Item,, menu_media_eject, 0x022
+Media/Disk/+D/Drive 2/Eject and _write..., Item,, menu_media_eject, 0x122
 
 Media/_Cartridge, Branch
 Media/Cartridge/_Timex Dock, Branch
